; ModuleID = '/home/carl/AnghaBench/libui/_doc/misctests/extr_gtkprogresstable.c_onStartTableClicked.c'
source_filename = "/home/carl/AnghaBench/libui/_doc/misctests/extr_gtkprogresstable.c_onStartTableClicked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@pbarStarted = common dso_local global i32 0, align 4
@pbarValue = common dso_local global i64 0, align 8
@startTable = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@pulseTable = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @onStartTableClicked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @onStartTableClicked(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @TRUE, align 4
  store i32 %5, i32* @pbarStarted, align 4
  store i64 0, i64* @pbarValue, align 8
  %6 = load i32, i32* @startTable, align 4
  %7 = load i32, i32* @FALSE, align 4
  %8 = call i32 @gtk_widget_set_sensitive(i32 %6, i32 %7)
  %9 = load i32, i32* @pulseTable, align 4
  %10 = call i32 @g_timeout_add(i32 100, i32 %9, i32* null)
  ret void
}

declare dso_local i32 @gtk_widget_set_sensitive(i32, i32) #1

declare dso_local i32 @g_timeout_add(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
